@@ -1,6 +1,7 @@
 Version 1.7.3+svn:
  * AI:
    * Formula AI debugger (uses -new-widgets)
+   * New 'debug()' formula function
  * Graphics:
    * New portrait for the Ancient Wose.
  * Language and i18n:
